feat(api): rollback when installation vcluster fails
