# pkg/nocalhost-api/app/api/v1/cluster_user/common.go
@@ -1,14 +1,12 @@
 package cluster_user
 
 import (
-	"encoding/json"
 	"github.com/gin-gonic/gin"
 	"nocalhost/internal/nocalhost-api/model"
 	"nocalhost/internal/nocalhost-api/service"
 	"nocalhost/internal/nocalhost-api/service/cooperator/ns_scope"
 	"nocalhost/pkg/nocalhost-api/app/router/ginbase"
 	"nocalhost/pkg/nocalhost-api/pkg/errno"
-	"nocalhost/pkg/nocalhost-api/pkg/log"
 	"nocalhost/pkg/nocalhost-api/pkg/setupcluster"
 )
 
@@ -107,90 +105,5 @@ func deleteShareSpaces(c *gin.Context, baseSpaceId uint64) {
 			MeshDevInfo:    meshDevInfo,
 		}
 		_ = NewDevSpace(req, c, []byte(clusterData.KubeConfig)).Delete()
-	}
-}
-
-func reCreateShareSpaces(c *gin.Context, user, baseSpaceId uint64) {
-	shareSpaces, err := service.Svc.ClusterUser().GetList(c, model.ClusterUserModel{BaseDevSpaceId: baseSpaceId})
-	if err != nil {
-		// can not find share space, do nothing
-		return
-	}
-
-	for _, clusterUser := range shareSpaces {
-		res := SpaceResourceLimit{}
-		_ = json.Unmarshal([]byte(clusterUser.SpaceResourceLimit), &res)
-		// create a new dev space
-		meshDevInfo := &setupcluster.MeshDevInfo{
-			Header:   clusterUser.TraceHeader,
-			ReCreate: true,
-		}
-		req := ClusterUserCreateRequest{
-			ClusterId:          &clusterUser.ClusterId,
-			UserId:             &clusterUser.UserId,
-			SpaceName:          clusterUser.SpaceName,
-			Memory:             &clusterUser.Memory,
-			Cpu:                &clusterUser.Cpu,
-			ApplicationId:      &clusterUser.ApplicationId,
-			NameSpace:          clusterUser.Namespace,
-			ID:                 &clusterUser.ID,
-			SpaceResourceLimit: &res,
-			BaseDevSpaceId:     clusterUser.BaseDevSpaceId,
-			MeshDevInfo:        meshDevInfo,
-		}
-
-		cluster, err := service.Svc.ClusterSvc().GetCache(clusterUser.ClusterId)
-		if err != nil {
-			log.Error(err)
-			return
-		}
-
-		// delete devSpace space first, it will delete database record whatever success delete namespace or not
-		devSpace := NewDevSpace(req, c, []byte(cluster.KubeConfig))
-
-		list, e := DoList(&model.ClusterUserModel{ID: baseSpaceId}, user, ginbase.IsAdmin(c), false)
-		if e != nil {
-			log.Error(e)
-			return
-		}
-		if len(list) != 1 {
-			log.Errorf(errno.ErrClusterUserNotFound.Error())
-			return
-		}
-		cu := list[0]
-
-		if cu.IsClusterAdmin() {
-			return
-		}
-
-		err = devSpace.Delete()
-		if err != nil {
-			log.Error(err)
-			return
-		}
-
-		result, err := devSpace.Create()
-		if err != nil {
-			log.Error(err)
-			return
-		}
-
-		if err := service.Svc.AuthorizeNsToUser(result.ClusterId, result.UserId, result.Namespace); err != nil {
-			log.Error(err)
-			return
-		}
-
-		if err := service.Svc.AuthorizeNsToDefaultSa(result.ClusterId, result.UserId, result.Namespace); err != nil {
-			log.Error(err)
-			return
-		}
-
-		for _, viewer := range cu.ViewerUser {
-			_ = ns_scope.AsViewer(result.ClusterId, viewer.ID, result.Namespace)
-		}
-
-		for _, cooper := range cu.CooperUser {
-			_ = ns_scope.AsCooperator(result.ClusterId, cooper.ID, result.Namespace)
-		}
 	}
 }
